[package]
name = "wordle5"
version = "0.1.0"
edition = "2021"

[dependencies.once_cell]
version = "1.14.0"
optional = true

[dependencies.howlong]
version = "0.1.7"
optional = true

[[bin]]
name = "wordle5"
path = "wordle5.rs"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[features]
instrument = ["once_cell"]
timing = ["howlong"]
