[package]
name = "wordle5"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5.3"

[dependencies.mimalloc]
version = "0.1.30"
default-features = false

[dependencies.once_cell]
version = "1.14.0"
optional = true

[dependencies.howlong]
version = "0.1.7"
optional = true

[[bin]]
name = "wordle5"
path = "wordle5.rs"

[profile.release]
panic = "abort"

[features]
instrument = ["once_cell"]
timing = ["howlong"]
